# project-akhir-struktur-data-grup-b-trio-macan

./: README.md  apikey.py  database.db  hash.py  kode_wilayah.csv  main.py  pyproject.toml  region_trie.py  requirements.txt
.streamlit/: secrets.toml
.streamlit/.streamlit/: secrets.toml
pages/: Home.py  Login.py  Masuk.py  Mendaftar.py  Perbandingan Cuaca.py  SIgn_Up.py  database.db  perbandingan_cuaca.py  region_trie.py
