[project]
name = "project-akhir-struktur-data-grup-b-trio-macan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fpdf>=1.7.2",
    "fpdf2>=2.8.5",
    "google-generativeai>=0.8.5",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "reportlab>=4.4.5",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
]
